CON-614: Evaluate CCL statements with functions (#404)
* doc update

* update CCL

* add logic to convert to a Function in Convert#stringToJava

* Initial checkpoint

* remove unnecessary method

* add support for aliasing

* small changes

* use correct timestamp

* update dependency version

* account for timestamp

* some optimizations

* add unit tests

* fix formatting

* handle more corner cases

* another unit test

* misc changes

* formatting:

* more unit tests

* more final changes

* update changelog

Co-authored-by: Jeff Nelson <jeff@cinchapi.com>