@@ -32,15 +32,28 @@ import javax.annotation.concurrent.Immutable;
 import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.DateTimeFormatter;
 
+import com.cinchapi.ccl.grammar.FunctionValueSymbol;
+import com.cinchapi.ccl.grammar.Symbol;
+import com.cinchapi.ccl.syntax.ConditionTree;
+import com.cinchapi.ccl.syntax.FunctionTree;
+import com.cinchapi.ccl.type.Function;
+import com.cinchapi.ccl.type.function.IndexFunction;
+import com.cinchapi.ccl.type.function.KeyConditionFunction;
+import com.cinchapi.ccl.type.function.KeyRecordsFunction;
+import com.cinchapi.ccl.type.function.TemporalFunction;
 import com.cinchapi.ccl.util.NaturalLanguage;
 import com.cinchapi.common.base.AnyStrings;
+import com.cinchapi.common.base.ArrayBuilder;
 import com.cinchapi.common.base.CheckedExceptions;
+import com.cinchapi.common.base.Enums;
+import com.cinchapi.common.io.ByteBuffers;
 import com.cinchapi.concourse.Concourse;
 import com.cinchapi.concourse.Link;
 import com.cinchapi.concourse.Tag;
 import com.cinchapi.concourse.Timestamp;
 import com.cinchapi.concourse.annotate.PackagePrivate;
 import com.cinchapi.concourse.annotate.UtilityClass;
+import com.cinchapi.concourse.lang.ConcourseCompiler;
 import com.cinchapi.concourse.thrift.Operator;
 import com.cinchapi.concourse.thrift.TObject;
 import com.cinchapi.concourse.thrift.Type;
@@ -130,7 +143,8 @@ public final class Convert {
      */
     private static Set<Class<?>> CLASSES_WITH_ENCODED_STRING_REPR = Sets
             .newHashSet(Link.class, Tag.class, ResolvableLink.class,
-                    Timestamp.class);
+                    Timestamp.class, IndexFunction.class,
+                    KeyConditionFunction.class, KeyRecordsFunction.class);
 
     /**
      * A {@link Pattern} that can be used to determine whether a string matches
@@ -245,6 +259,75 @@ public final class Convert {
                 catch (IllegalStateException e) {
                     throw new UnsupportedOperationException(
                             "Cannot convert string based Timestamp to a TObject");
+                }
+            }
+            else if(object instanceof Function) {
+                type = Type.FUNCTION;
+                Function function = (Function) object;
+                byte[] nameBytes = function.operation()
+                        .getBytes(StandardCharsets.UTF_8);
+                byte[] keyBytes = function.key()
+                        .getBytes(StandardCharsets.UTF_8);
+                if(function instanceof IndexFunction) {
+                    /*
+                     * Schema:
+                     * | type (1) | timestamp(8) | nameLength (4) | name
+                     * (nameLength) | key |
+                     */
+                    bytes = ByteBuffer.allocate(
+                            1 + 8 + 4 + nameBytes.length + keyBytes.length);
+                    bytes.put((byte) FunctionType.INDEX.ordinal());
+                    bytes.putLong(((TemporalFunction) function).timestamp());
+                    bytes.putInt(nameBytes.length);
+                    bytes.put(nameBytes);
+                    bytes.put(keyBytes);
+                }
+                else if(function instanceof KeyRecordsFunction) {
+                    /*
+                     * Schema:
+                     * | type (1) | timestamp(8) | nameLength (4) | name
+                     * (nameLength) | keyLength (4) | key (keyLength) | records
+                     * (8 each) |
+                     */
+                    KeyRecordsFunction func = (KeyRecordsFunction) function;
+                    bytes = ByteBuffer.allocate(1 + 8 + 4 + nameBytes.length + 4
+                            + keyBytes.length + 8 * func.source().size());
+                    bytes.put((byte) FunctionType.KEY_RECORDS.ordinal());
+                    bytes.putLong(((TemporalFunction) function).timestamp());
+                    bytes.putInt(nameBytes.length);
+                    bytes.put(nameBytes);
+                    bytes.putInt(keyBytes.length);
+                    bytes.put(keyBytes);
+                    for (long record : func.source()) {
+                        bytes.putLong(record);
+                    }
+                }
+                else if(function instanceof KeyConditionFunction) {
+                    /*
+                     * Schema:
+                     * | type (1) | timestamp(8) | nameLength (4) | name
+                     * (nameLength) | keyLength (4) | key (keyLength) |
+                     * condition |
+                     */
+                    KeyConditionFunction func = (KeyConditionFunction) function;
+                    String condition = ConcourseCompiler.get()
+                            .tokenize(func.source()).stream()
+                            .map(Symbol::toString)
+                            .collect(Collectors.joining(" "));
+                    bytes = ByteBuffer.allocate(1 + 9 + 4 + nameBytes.length + 4
+                            + keyBytes.length + condition.length());
+                    bytes.put((byte) FunctionType.KEY_CONDITION.ordinal());
+                    bytes.putLong(((TemporalFunction) function).timestamp());
+                    bytes.putInt(nameBytes.length);
+                    bytes.put(nameBytes);
+                    bytes.putInt(keyBytes.length);
+                    bytes.put(keyBytes);
+                    bytes.put(condition.getBytes(StandardCharsets.UTF_8));
+                }
+                else {
+                    throw new UnsupportedOperationException(
+                            "Cannot convert the following function to a TObject: "
+                                    + function);
                 }
             }
             else {
@@ -447,6 +530,9 @@ public final class Convert {
      * non double number depending upon whether it is a standard integer (e.g.
      * less than {@value java.lang.Integer#MAX_VALUE}), a long, or a floating
      * point decimal</li>
+     * <li><strong>Function</strong> - the value is converted to a
+     * {@link Function} if it is not quoted and can be parsed as such by the
+     * {@link ConcourseCompiler}.</li>
      * </ul>
      * </p>
      * 
@@ -509,6 +595,21 @@ public final class Convert {
             return timestamp;
         }
         else {
+            if(last == ')') {
+                // It is possible that the string is a FunctionValue, so use the
+                // Compiler to try to parse it as such. Please note that this
+                // method intentionally does not attempt to convert to an
+                // ImplictKeyRecordFunction (e.g. key | function) because those
+                // cannot serve as a evaluation value
+                try {
+                    FunctionTree tree = (FunctionTree) ConcourseCompiler.get()
+                            .parse(value);
+                    FunctionValueSymbol symbol = (FunctionValueSymbol) tree
+                            .root();
+                    return symbol.function();
+                }
+                catch (Exception e) {/* ignore */}
+            }
             try {
                 return MoreObjects
                         .firstNonNull(AnyStrings.tryParseNumber(value), value);
@@ -516,6 +617,7 @@ public final class Convert {
             catch (NumberFormatException e) {
                 return value;
             }
+
         }
     }
 
@@ -634,21 +736,84 @@ public final class Convert {
                 java = buffer.getLong();
                 break;
             case TAG:
-                java = ByteBuffers.getString(buffer);
+                java = ByteBuffers.getUtf8String(buffer);
                 break;
             case TIMESTAMP:
                 java = Timestamp.fromMicros(buffer.getLong());
+                break;
+            case FUNCTION:
+                FunctionType type = Enums.parseIgnoreCase(FunctionType.class,
+                        buffer.get());
+                long timestamp = buffer.getLong();
+                int nameLength = buffer.getInt();
+                String name = ByteBuffers
+                        .getUtf8String(ByteBuffers.get(buffer, nameLength));
+                int keyLength;
+                String key;
+                switch (type) {
+                case INDEX:
+                    key = ByteBuffers.getUtf8String(buffer);
+                    java = new IndexFunction(name, key, timestamp);
+                    break;
+                case KEY_RECORDS:
+                    keyLength = buffer.getInt();
+                    key = ByteBuffers
+                            .getUtf8String(ByteBuffers.get(buffer, keyLength));
+                    ArrayBuilder<Long> ab = ArrayBuilder.builder();
+                    while (buffer.hasRemaining()) {
+                        long record = buffer.getLong();
+                        ab.add(record);
+                    }
+                    java = new KeyRecordsFunction(timestamp, name, key,
+                            ab.build());
+                    break;
+                case KEY_CONDITION:
+                    keyLength = buffer.getInt();
+                    key = ByteBuffers
+                            .getUtf8String(ByteBuffers.get(buffer, keyLength));
+                    String condition = ByteBuffers.getUtf8String(buffer);
+                    ConditionTree tree = (ConditionTree) ConcourseCompiler.get()
+                            .parse(condition);
+                    java = new KeyConditionFunction(name, key, tree, timestamp);
+                    break;
+                }
                 break;
             case NULL:
                 java = null;
                 break;
             default:
-                java = ByteBuffers.getString(buffer);
+                java = ByteBuffers.getUtf8String(buffer);
                 break;
             }
             buffer.rewind();
         }
         return java;
+    }
+
+    /**
+     * If {@code value} is a string that represents a function value, convert it
+     * to a {@link Function}. If {@code value} is an escaped string that could
+     * be interpreted as a function value, unescape it and return it. Otherwise,
+     * return the original value.
+     * 
+     * @param value
+     * @return the converted function value, an unescaped version of the
+     *         original {@code value} or the original {@code value}
+     */
+    public static Object toFunctionOrUnescapedValueIfPossible(Object value) {
+        if(value instanceof String) {
+            Object $value = stringToJava((String) value);
+            if($value instanceof Function) {
+                value = $value;
+            }
+            else if($value instanceof String) {
+                // It is possible that #stringToJava converted the original
+                // value to a more optimized string (e.g. dropping quotes that
+                // were used for escaping) so use the new string value
+                value = $value;
+            }
+        }
+        return value;
     }
 
     /**
@@ -896,6 +1061,15 @@ public final class Convert {
                     this.getClass().getSimpleName(), ccl);
         }
 
+    }
+
+    /**
+     * An enum that describes the possible function value types.
+     *
+     * @author Jeff Nelson
+     */
+    private enum FunctionType {
+        INDEX, KEY_RECORDS, KEY_CONDITION
     }
 
 }
